--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "react-router dev --host",
     "postinstall": "npm run cf-typegen",
     "preview": "npm run build && vite preview",
-    "typecheck": "npm run cf-typegen && react-router typegen && tsc -b"
+    "typecheck": "npm run cf-typegen && react-router typegen && tsc -b",
+    "test": "vitest"
   },
   "dependencies": {
     "drizzle-orm": "~0.36.3",
