fix: Resolve path alias for src directory in tsconfig.cloudflare.json

--- a/tsconfig.cloudflare.json
+++ b/tsconfig.cloudflare.json
@@ -22,7 +22,7 @@
     "rootDirs": [".", "./.react-router/types"],
     "paths": {
       "~/database/*": ["./database/*"],
-      "~/*": ["./app/*"]
+      "~/*": ["./app/*", "./src/*"]
     },
     "esModuleInterop": true,
     "resolveJsonModule": true
