--- a/tsconfig.cloudflare.json
+++ b/tsconfig.cloudflare.json
@@ -7,6 +7,8 @@
     "app/**/.client/**/*",
     "database/**/*",
     "workers/**/*",
+    "src/**/*",
+    "src/types/**/*",
     "worker-configuration.d.ts"
   ],
   "compilerOptions": {
