feat: Add issues to gitignore and update database_id

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,12 @@ reviews/*
 !reviews/.gitkeep
 issue.txt
 @issue.txt
+issues/*
+!issues/.gitkeep
 
 # gemini
 .gemini
 
-# pr
+# git
 pr/*
 !pr/.gitkeep
