--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "npm run build && vite preview",
     "typecheck": "npm run cf-typegen && react-router typegen && tsc -b",
     "test": "vitest",
+    "test:e2e": "playwright test --reporter list",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.0.12",
+    "@playwright/test": "^1.53.2",
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
     "@testing-library/jest-dom": "^6.6.3",
@@ -41,6 +43,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react": "^7.37.5",
     "jsdom": "^26.1.0",
+    "playwright": "^1.53.2",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
