--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "preview": "npm run build && vite preview",
     "typecheck": "npm run cf-typegen && react-router typegen && tsc -b",
     "test": "vitest",
-    "test:e2e": "playwright test --reporter list",
+    "test:e2e": "playwright test -x --reporter list",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
